--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic/angular": "^6.1.9",
     "@ionic/cordova-builders": "^8.0.0",
     "cordova": "^11.1.0",
+    "cordova-android": "10.1.2",
     "ionicons": "^6.0.3",
     "ngx-filter-pipe": "^2.1.2",
     "rxjs": "~7.5.0",
@@ -74,6 +75,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {}
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   }
 }
