--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@ionic/angular": "^6.1.9",
     "@ionic/cordova-builders": "^8.0.0",
     "cordova": "^11.1.0",
-    "cordova-android": "10.1.2",
     "ionicons": "^6.0.3",
     "ngx-filter-pipe": "^2.1.2",
     "rxjs": "~7.5.0",
@@ -46,6 +45,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "cordova-android": "^10.1.2",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^5.0.0",
